# al-lsp

./: .gitattributes  .gitignore  Cargo.toml  README.md  how-to-test.md
crates/al-lsp/: Cargo.toml
crates/al-lsp/src/: backend.rs  builtins.rs  builtins_missing_generated.rs  convert.rs  main.rs  state.rs
crates/al-lsp/src/handlers/: code_action.rs  completion.rs  diagnostics.rs  document_highlight.rs  document_symbol.rs  document_sync.rs  events.rs  folding_range.rs  formatting.rs  goto_definition.rs  goto_implementation.rs  goto_type_definition.rs  hover.rs  mod.rs  references.rs  rename.rs  signature_help.rs  workspace_symbol.rs
crates/al-parser/: Cargo.toml  build.rs  grammar.js  package-lock.json  package.json  tree-sitter.json
crates/al-parser/queries/: highlights.scm
crates/al-parser/src/: grammar.json  lib.rs  node-types.json
crates/al-parser/test/corpus/: expressions.txt  objects.txt  procedures.txt  statements.txt
crates/al-syntax/: Cargo.toml
crates/al-syntax/src/: ast.rs  diagnostics.rs  document.rs  formatting.rs  lib.rs  navigation.rs  symbols.rs
editors/vscode/: language-configuration.json  package-lock.json  package.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: al.tmLanguage.json
src/: grammar.json  node-types.json  parser.c
test-fixtures/: addressProvider_interface.al  customer_table.al  hello.al  sample_page.al
