[workspace]
resolver = "2"
members = [
    "crates/al-parser",
    "crates/al-syntax",
    "crates/al-lsp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tree-sitter = "0.24"
lsp-types = "0.94"
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
ropey = "1"
dashmap = "6"
tracing = "0.1"
tracing-subscriber = "0.3"
