[package]
name = "al-lsp"
version.workspace = true
edition.workspace = true

[[bin]]
name = "al-lsp"
path = "src/main.rs"

[dependencies]
al-parser = { path = "../al-parser" }
al-syntax = { path = "../al-syntax" }
tree-sitter.workspace = true
tower-lsp.workspace = true
lsp-types.workspace = true
tokio.workspace = true
ropey.workspace = true
dashmap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
